--- a/ydf_tree.ipynb
+++ b/ydf_tree.ipynb
@@ -31,6 +31,8 @@
     "train = pd.read_csv(\"C:/Users/moham/OneDrive/Documents/Desktop/JIT/letter_train.csv\")\n",
     "train.replace(r'^\\s*$', np.nan, regex=True, inplace=True)\n",
     "train.dropna(inplace=True)\n",
+    "train = train.astype({col: 'float64' for col in train.columns if col.startswith(('x', 'y', 'z'))})\n",
+    "\n",
     "tuner=ydf.RandomSearchTuner(num_trials=50)\n",
     "tuner.choice('max_depth',[10,16,18,20,22,30])\n",
     "tuner.choice('num_trees',[150,300,450,600,700])\n",
@@ -39,6 +41,8 @@
     "test = pd.read_csv(\"C:/Users/moham/OneDrive/Documents/Desktop/JIT/letter_test.csv\")\n",
     "test.replace(r'^\\s*$', np.nan, regex=True, inplace=True)\n",
     "test.dropna(inplace=True)\n",
+    "test = test.astype({col: 'float64' for col in test.columns if col.startswith(('x', 'y', 'z'))})\n",
+    "\n",
     "# Evaluate the model\n",
     "evaluation = model.evaluate(test)\n",
     "print(f\"Accuracy: {evaluation.accuracy}\")\n",
