--- a/data_collect.ipynb
+++ b/data_collect.ipynb
@@ -25,7 +25,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"C:/Users/moham/OneDrive/Documents/Desktop/JIT/letter_test.csv\", mode='a', newline='') as file:\n",
+    "\n",
+    "        writer = csv.writer(file)\n",
+    "        writer.writerow(['gesture'] + [f'x{i}' for i in range(21)] + [f'y{i}' for i in range(21)] + [f'z{i}' for i in range(21)])\n",
+    "        file.flush()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,10 +47,10 @@
     "    \n",
     "    \n",
     "    # Open the CSV file in append mode\n",
-    "    with open(\"C:/Users/moham/OneDrive/Documents/Desktop/JIT/letter_train.csv\", mode='a', newline='') as file:\n",
+    "    with open(\"C:/Users/moham/OneDrive/Documents/Desktop/JIT/letter_test.csv\", mode='a', newline='') as file:\n",
     "\n",
     "        writer = csv.writer(file)\n",
-    "        writer.writerow(['gesture'] + [f'x{i}' for i in range(21)] + [f'y{i}' for i in range(21)] + [f'z{i}' for i in range(21)])\n",
+    "        #writer.writerow(['gesture'] + [f'x{i}' for i in range(21)] + [f'y{i}' for i in range(21)] + [f'z{i}' for i in range(21)])\n",
     "\n",
     "\n",
     "        frame_rgb = cv.cvtColor(image, cv.COLOR_BGR2RGB)\n",
@@ -54,7 +67,9 @@
     "                    land.extend([lm.x, lm.y, lm.z])\n",
     "                \n",
     "                # Write gesture and landmarks to CSV\n",
-    "                writer.writerow([gestures, handedness] + land)\n",
+    "                writer.writerow([gestures] + land)\n",
+    "                file.flush()\n",
+    "\n",
     "\n",
     "        # Display the image\n",
     "        cv.imshow('feed', cv.flip(image, 1))\n",
@@ -64,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +97,7 @@
     "           \n",
     "        # Process other gestures as-is\n",
     "            li=os.listdir(paths)\n",
-    "            for i in range (100,106):\n",
+    "            for i in range (600,700):\n",
     "            #for images in os.listdir(paths):\n",
     "                images=li[i]\n",
     "                imagepath = os.path.join(paths, images)\n",
@@ -95,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +142,21 @@
       "T\n",
       "U\n",
       "V\n",
-      "W\n"
+      "W\n",
+      "X\n",
+      "Y\n",
+      "Z\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
